<resources>
    <string name="app_name">SleepAiden</string>
    <string name="app_version">v1.0.0</string>
    <string name="title_activity_settings">Settings</string>
    <string name="widget_title_sleep_records">Recent Sleep Records</string>
    <string name="delete">Delete</string>
    <string name="display_date_format">MMM d, yyyy</string>
    <string name="display_datetime_format">MMM d HH:mm</string>
    <string name="pref_header_user">User Profile</string>
    <string name="pref_title_nickname">User Name</string>
    <string name="pref_title_update_password">Update Password</string>
    <string name="pref_title_current_password">Current Password</string>
    <string name="pref_title_new_password">New Password</string>
    <string name="pref_title_repeat_password">Repeat New Password</string>
    <string name="pref_title_baby">Baby</string>
    <string name="pref_title_baby_information">Update Baby Information</string>
    <string name="pref_title_suggestion">Add Suggestion</string>
    <string name="suggestion_thanks_message">Thank you for your suggestion!</string>
    <string name="pref_title_appinfo">App Information</string>
    <string name="pref_version_title">SleepAiden Version</string>
    <string name="pref_version_summary">Version: v1.0.0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="security_code_title">Security Code</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="error_invalid_security_code">Invalid security code.</string>
    <string name="reset_btn">Reset</string>
    <string name="send_email_btn">Send Email</string>
    <string name="forget_password_title">Forgot Password</string>
    <string name="register_account_title">Sign Up with Email</string>
    <string name="sign_in_google_failed">Failed to sign in with your google account.</string>
    <string name="sign_in_facebook_failed">Failed to sign in with your facebook account.</string>
    <string name="sign_in_wechat_failed">Failed to sign in with Wechat.</string>
    <string name="sign_in_with_thirdyparty">Or sign in with</string>
    <string name="menu_add_sleep_record">Add</string>
    <string name="email_verify_title">Verify Your Email.</string>
    <string name="verify_code">Verification Code</string>
    <string name="verify_btn">Verify</string>
    <string name="email_verify_dialog_title">Email Verification</string>
    <string name="sleep_trend_widget_title">Sleep Trend</string>
    <string name="title_activity_add_record">Add Sleep Record</string>
    <string name="fall_asleep_time_label">Fall Asleep Time</string>
    <string name="wakeup_time_label">Wakeup Time</string>
    <string name="cancel_btn">Cancel</string>
    <string name="failed_to_parse_fallasleep_time">Fall asleep time has a wrong format.</string>
    <string name="failed_to_parse_wakeup_time">Wakeup time has a wrong format.</string>
    <string name="wakeup_time_before_fallasleep_time">Wakeup time is ahead of fall asleep time.</string>
    <string name="wakeup_time_after_current_time">Wakeup time is behind current time.</string>
    <string name="time_between_too_long">The time between fall asleep time and wakeup time is larger than 24 hours.</string>
    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_sleep_records">Record List</string>
    <string name="nav_menu_tools">Tools</string>
    <string name="nav_menu_sleep_training">Sleep Training</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="nav_menu_communicate">Communicate</string>
    <string name="nav_menu_share">Share</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_about">About SleepAiden</string>
    <string name="nav_white_noise">White Noise</string>
    <string name="title_activity_sleep_records">Sleep Records</string>
    <string-array name="month_short">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="age_years_singlular">" Yr"</string>
    <string name="age_months_singlular">" Mo"</string>
    <string name="age_days_singlular">" Day"</string>
    <string name="age_years_plural">" Yrs"</string>
    <string name="age_months_plural">" Mos"</string>
    <string name="age_days_plural">" Days"</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repead_password">Repeat Password</string>
    <string name="prompt_username">User Name</string>
    <string name="prompt_babyname">Baby Name</string>
    <string name="prompt_baby_birthday">Baby Birthday</string>
    <string name="progress_message_sign_in">Signing in ...</string>
    <string name="progress_message_register">Registering ...</string>
    <string name="progress_message_save">Saving ...</string>
    <string name="progress_message_load">Loading ...</string>
    <string name="progress_message_verify">Verifying ...</string>
    <string name="progress_message_send">Sending ...</string>
    <string name="progress_message_reset">Reseting ...</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_invalid_password">Password length is less than 6.</string>
    <string name="error_incorrect_password">Account does not exist or wrong password</string>
    <string name="error_internal_server">Service unavailable. Please try again later.</string>
    <string name="error_unmatch_password">Password does not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_gender_required">The gender of the baby is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register_agree_tos">By creating an account, you are agreeing SleepAiden\'s <a href="https://sleepaiden.com/tos">Terms of Service</a> and <a href="https://sleepaiden.com/pp">Privacy Policy</a>.</string>
    <string name="link_about">https://sleepaiden.com/about</string>
    <string name="error_failed_to_register">Failed to create the user account, please try again later.</string>
    <string name="error_email_used">This email was already used with another account.</string>
    <string name="error_failed_to_connect">Failed to connect to the server. Please try again later.</string>
    <string name="error_sleep_record_overlap">The sleep record overlaps with other records.</string>
    <string name="error_account_does_not_exist">Account does not exist.</string>
    <string name="error_wrong_password">Wrong password.</string>
    <string name="error_wrong_verify_code">The verify code is wrong.</string>
    <string name="error_wrong_security_code">The security code is wrong.</string>
    <string name="error_auth_failure">Please login.</string>
    <string name="button_Save">Save</string>
    <string name="button_boy">Boy</string>
    <string name="button_girl">Girl</string>
    <string name="babyinfo_fragment_title">Edit Baby Information</string>
    <string name="permission_not_granted">Cancelling, required permissions are not granted.</string>
    <string-array name="choose_photo_options">
        <item>Take Photo</item>
        <item>Choose from Library</item>
        <item>Cancel</item>
    </string-array>
    <string name="choose_photo_title">Select a Photo</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="admob_id_main_activity">ca-app-pub-4044463930410370/2133723199</string>
    <string name="facebook_app_id">1891279461107263</string>
    <string name="fb_login_protocol_scheme">fb1891279461107263</string>
    <string name="wechat_app_id">wx88888888</string>
    <string name="sleep_training_checklist_title">Sleep Training Checklist</string>
    <string name="sleep_training_plan_title">Sleep Training Plan</string>
    <string name="sleep_training_title">Sleep Training</string>
    <string name="menu_next">Next</string>
    <string name="menu_start">Start</string>
    <string-array name="sleep_training_checklist">
        <item>"Your baby is more than 4 months old"</item>
        <item>"Your baby doesn't have a medical condition"</item>
        <item>"Your baby has a bedtime routine"</item>
        <item>"Your baby has a consistent bedtime"</item>
    </string-array>
    <string-array name="sleep_training_checklist_description">
        <item>"By about 4 months, babies have typically started to develop a regular sleep-wake cycle and dropped most of their night feedings. These are signs they may be ready to start sleep training."</item>
        <item>"An underlying condition, such as sleep apnea, needs to be addressed by your baby's doctor before you consider a sleep training program."</item>
        <item>"A routine can include a warm bath, a book, and a lullaby before putting her to bed."</item>
        <item>"Experts recommend a bedtime between 7 and 8 o'clock, so your baby isn't overtired and fighting sleep."</item>
    </string-array>
    <string name="first_week">First Week</string>
    <string name="second_week">Second Week</string>
    <string name="following_week">The Following Weeks</string>
    <string name="first_cried_out">First Cried Out Time</string>
    <string name="second_cried_out">Second Cried Out Time</string>
    <string name="following_cried_out">Following Cried Out Time</string>
    <string name="soothe_time">Soothe Time</string>
    <string name="minute_short">" m"</string>
    <string name="day_x">"Day %s"</string>
    <string name="time_elapsed">Elapsed Time</string>
    <string name="default_count_time">00:00</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_history">Training History</string>
    <string name="menu_report">Training Report</string>
    <string name="menu_reset_plan">Reset Training Plan</string>
    <string name="alert_btn_OK">OK</string>
    <string name="alert_btn_cancel">Cancel</string>
    <string name="training_crying_desc">My baby starts to cry or is crying.</string>
    <string name="training_soothe_desc">Get into the room and soothe the baby (without picking up) now.</string>
    <string name="training_begin_desc">Put the baby in the crib and leave the room now.</string>
    <string name="training_finish_desc">My baby had fallen asleep.</string>
    <string name="alert_message_reset_training_plan">Are you sure to reset the sleep training plan? This will remove all the previous training records.</string>
    <string name="training_result_title">Sleep Training Result</string>
    <string name="total_time_elapsed_label">Total Elapsed Time</string>
    <string name="cried_out_times_label">Cried Out Times</string>
    <string name="soothe_times_label">Soothe Times</string>
    <string name="timer_15m">15 minutes</string>
    <string name="timer_30m">30 minutes</string>
    <string name="timer_1h">1 hour</string>
    <string name="timer_2h">2 hours</string>
    <string name="timer_4h">4 hours</string>
    <string name="timer_6h">6 hours</string>
    <string name="timer_8h">8 hours</string>
    <string name="timer_10h">10 hours</string>
</resources>