<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_records"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_menu_sleep_records" />
    </group>

    <item android:title="@string/nav_menu_tools">
        <menu>
            <item
                android:id="@+id/nav_sleep_training"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_menu_sleep_training" />
        </menu>
    </item>

    <item android:title="@string/nav_menu_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_menu_share" />
        </menu>
    </item>

    <item android:title="@string/nav_menu_settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_menu_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_logout" />
        </menu>
    </item>
</menu>
