<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="im.hch.sleeprecord.activities.main.BabyInfoFragment">

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/babyinfo_form"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/babyname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_babyname"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/baby_birthday"
                android:hint="@string/prompt_baby_birthday"
                android:focusable="false"
                android:editable="false" />
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:paddingTop="@dimen/form_item_padding_top"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:text="@string/button_boy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/boyRadioButton"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/button_girl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/girlRadioButton"
                android:layout_weight="1" />
        </RadioGroup>

        <LinearLayout
            android:paddingTop="@dimen/form_item_padding_top"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/button_Save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/babyinfo_save_btn"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
