<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_sleep_training"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:text="@string/day_x"
        android:textAlignment="center"
        android:textColor="@color/accent"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/day_x_textview_margin_bottom"
        android:id="@+id/dayXTextView" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/time_elapsed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <im.hch.sleeprecord.views.CountUpTextView
            android:text="@string/default_count_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalTimeTextView"
            android:layout_weight="1" />

    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="@dimen/training_image_square"
            android:layout_height="@dimen/training_image_square"
            app:srcCompat="@mipmap/put_baby_to_crib"
            android:layout_centerInParent="true"
            android:contentDescription="@string/training_begin_desc"
            android:id="@+id/imageView"/>
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:text="@string/training_begin_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/stageInfoTextView"/>

            <im.hch.sleeprecord.views.CountDownTextView
                android:text="@string/default_count_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/countDownTextView"/>
        </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stageCheckbox" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/training_finish_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/finishCheckbox" />
    </LinearLayout>

</LinearLayout>
